@@ -1,4 +1,5 @@
 Version 0.9.41dev (?? ??? ???)
+  - Fixed bug 739010: error creating postgres tables
   - Fixed bug 740983: in admin.php, should be "false" not "$false"
   - Added patch 710867: Allow postgresql connections through unix sockets
   - Added patch 707382: Fix for Oracle - don't use 'as' in SQL.
